After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689370 - GDM doesn't react well to hostname changes at startup
GDM doesn't react well to hostname changes at startup
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-30 18:02 UTC by Ray Strode [halfline]
Modified: 2012-11-30 18:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
access-file: don't use FamilyLocal for auth cookie (2.40 KB, patch)
2012-11-30 18:02 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2012-11-30 18:02:45 UTC
Right now if a user's system changes hostname at just
the right time, then the slave will get denied access
to the X server.

The failure is because the X server checks to see if the hostname
matches the local hostname before accepting the entry.
Comment 1 Ray Strode [halfline] 2012-11-30 18:02:46 UTC
Created attachment 230316 [details] [review]
access-file: don't use FamilyLocal for auth cookie

FamilyLocal is really fragile to hostname changes, so
avoid using it when creating the initial auth cookie for
establishing access to the X server for the slave.

This commit changes the Xauthority entry to use FamilyWild
which makes the address of the entry unimportant.
Comment 2 Ray Strode [halfline] 2012-11-30 18:07:41 UTC
Attachment 230316 [details] pushed as 0fccf4e - access-file: don't use FamilyLocal for auth cookie