access-file: don't use FamilyLocal for auth cookie

FamilyLocal is really fragile to hostname changes, so
avoid using it when creating the initial auth cookie for
establishing access to the X server for the slave.

This commit changes the Xauthority entry to use FamilyWild
which makes the address of the entry unimportant.

https://bugzilla.gnome.org/show_bug.cgi?id=689370